[gd_scene load_steps=16 format=3 uid="uid://cfa6joyhm2ntb"]

[ext_resource type="Script" path="res://2d/actors/enemies/enemy_1_old.gd" id="1_0uvdk"]
[ext_resource type="Texture2D" uid="uid://bbve78u03ju8s" path="res://assets/circle.png" id="2_q4saf"]
[ext_resource type="PackedScene" uid="uid://d03h3h0vkxquc" path="res://2d/components/context_map_old.tscn" id="3_hhfu4"]
[ext_resource type="PackedScene" uid="uid://cgfrp56dfyyer" path="res://2d/components/hitbox.tscn" id="4_vypkd"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="5_sgt6l"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="6_6tjn1"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="7_qtp1y"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="8_jmd5r"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="9_r44se"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x721j"]
radius = 1.0
height = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hfwcs"]
radius = 120.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i3dht"]
radius = 6.0
height = 15.0

[sub_resource type="Animation" id="Animation_0be5a"]
resource_name = "Attack"
length = 0.3
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hitbox")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"trigger"
}]
}

[sub_resource type="Animation" id="Animation_l6uwh"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5yqsr"]
_data = {
"Attack": SubResource("Animation_0be5a"),
"RESET": SubResource("Animation_l6uwh")
}

[node name="Enemy1" type="CharacterBody2D" node_paths=PackedStringArray("sight_area", "sight_line", "nav_agent", "context_map", "hitbox", "cooldown_timer", "anim_player", "state_chart")]
collision_layer = 4
script = ExtResource("1_0uvdk")
sight_area = NodePath("SightArea")
sight_line = NodePath("SightLine")
nav_agent = NodePath("NavigationAgent2D")
context_map = NodePath("ContextMap")
hitbox = NodePath("Hitbox")
cooldown_timer = NodePath("CooldownTimer")
anim_player = NodePath("AnimationPlayer")
state_chart = NodePath("StateChart")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -3)
scale = Vector2(0.005, 0.005)
texture = ExtResource("2_q4saf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource("CapsuleShape2D_x721j")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="SightArea" type="Area2D" parent="."]
visible = false
position = Vector2(0, -3)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightArea"]
shape = SubResource("CircleShape2D_hfwcs")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="SightLine" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, -3)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 15.0
avoidance_enabled = true
radius = 6.0
debug_use_custom = true
debug_path_custom_color = Color(0.168627, 0.607843, 0.411765, 0.686275)
debug_path_custom_point_size = 1.0

[node name="ContextMap" parent="." instance=ExtResource("3_hhfu4")]

[node name="Hitbox" parent="." instance=ExtResource("4_vypkd")]
position = Vector2(0, -3)
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="Hitbox"]
modulate = Color(0, 0, 0, 1)
position = Vector2(2, 0)
scale = Vector2(0.001, 0.001)
texture = ExtResource("2_q4saf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(6, 0)
shape = SubResource("CapsuleShape2D_i3dht")

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5yqsr")
}

[node name="StateChart" type="Node" parent="."]
script = ExtResource("5_sgt6l")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("6_6tjn1")
initial_state = NodePath("Idling")

[node name="Idling" type="Node" parent="StateChart/Root"]
script = ExtResource("7_qtp1y")

[node name="OnTargetSpotted" type="Node" parent="StateChart/Root/Idling"]
script = ExtResource("8_jmd5r")
to = NodePath("../../Chasing")
event = &"target_spotted"
delay_in_seconds = "0.0"

[node name="OnAttack" type="Node" parent="StateChart/Root/Idling"]
script = ExtResource("8_jmd5r")
to = NodePath("../../Attacking")
event = &"attack"
delay_in_seconds = "0.0"

[node name="Chasing" type="Node" parent="StateChart/Root"]
script = ExtResource("7_qtp1y")

[node name="OnTargetLost" type="Node" parent="StateChart/Root/Chasing"]
script = ExtResource("8_jmd5r")
to = NodePath("../../Idling")
event = &"target_lost"
delay_in_seconds = "0.0"

[node name="OnAttack" type="Node" parent="StateChart/Root/Chasing"]
script = ExtResource("8_jmd5r")
to = NodePath("../../Attacking")
event = &"attack"
delay_in_seconds = "0.0"

[node name="Attacking" type="Node" parent="StateChart/Root"]
script = ExtResource("7_qtp1y")

[node name="OnAttackFinished" type="Node" parent="StateChart/Root/Attacking"]
script = ExtResource("8_jmd5r")
to = NodePath("../../Idling")
event = &"attack_finished"
delay_in_seconds = "0.0"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="StateChartDebugger" parent="CanvasLayer" instance=ExtResource("9_r44se")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 105.0
offset_right = 363.0
offset_bottom = 352.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(0.3, 0.3)
initial_node_to_watch = NodePath("../..")
ignore_events = true
ignore_transitions = true

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_nav_agent_velocity_computed"]
[connection signal="state_entered" from="StateChart/Root/Idling" to="." method="_on_idling_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Idling" to="." method="_on_idling_state_physics_processing"]
[connection signal="state_exited" from="StateChart/Root/Chasing" to="." method="_on_chasing_state_exited"]
[connection signal="state_physics_processing" from="StateChart/Root/Chasing" to="." method="_on_chasing_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Attacking" to="." method="_on_attacking_state_entered"]
